--- a/src/assets/styles/game.css
+++ b/src/assets/styles/game.css
@@ -12,10 +12,16 @@ input {
 }
 
 
+.card {
+    box-shadow: 0 5px 5px rgba(0,0,0,0.1),   0 10px 5px rgba(0,0,0,0.1);
+    opacity: 0.9;
+}
+
 .default-game-card  {
 
     width: 15rem;
     height: 18rem;
+    
 
 
     img {
@@ -28,9 +34,12 @@ input {
 
 .game-collection {
   height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  overflow: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  overflow-x: scroll;
+  
+  
+
   gap: 1rem;
 }
 
